RESOLVED FIXED302322
[WebXR] hit test subscription should fail if the feature was not requested
https://bugs.webkit.org/show_bug.cgi?id=302322
Summary [WebXR] hit test subscription should fail if the feature was not requested
Fujii Hironori
Reported 2025-11-11 03:41:21 PST
[WebXR] Transient hit test subscription should fail if the feature was not requested imported/w3c/web-platform-tests/webxr/hit-test/ar_hittest_subscription_states_transient.https.html is failing PASS Transient hit test subscription succeeds if the feature was requested - webgl PASS Transient hit test subscription succeeds if the feature was requested - webgl2 FAIL Transient hit test subscription fails if the feature was not requested - webgl assert_true: `requestHitTestSourceForTransientInput` succeeded when it was expected to fail expected true got false FAIL Transient hit test subscription fails if the feature was not requested - webgl2 assert_true: `requestHitTestSourceForTransientInput` succeeded when it was expected to fail expected true got false PASS Transient test subscription fails if the feature was requested but the session already ended - webgl PASS Transient test subscription fails if the feature was requested but the session already ended - webgl2
Attachments
Fujii Hironori
Comment 1 2025-11-11 20:27:26 PST
302876@main fixed a bug of imported/w3c/web-platform-tests/webxr/hit-test/ar_hittest_subscription_states_regular.https.html. Now the test also fails due to this bug.
Fujii Hironori
Comment 2 2025-11-12 01:54:52 PST
EWS
Comment 3 2025-11-13 00:40:34 PST
Committed 302971@main (7540c603a777): <https://commits.webkit.org/302971@main> Reviewed commits have been landed. Closing PR #53802 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2025-11-13 00:41:11 PST
Note You need to log in before you can comment on or make changes to this bug.