[WebXR] hit test subscription should fail if the feature was not requested https://bugs.webkit.org/show_bug.cgi?id=302322

Reviewed by Adrian Perez de Castro and Sergio Villar Senin.

requestHitTestSource and requestHitTestSourceForTransientInput of XRSession
interface have to check the hit-test feature was requested.
<https://immersive-web.github.io/hit-test/#dom-xrsession-requesthittestsource>

Tests: imported/w3c/web-platform-tests/webxr/hit-test/ar_hittest_subscription_states_regular.https.html
       imported/w3c/web-platform-tests/webxr/hit-test/ar_hittest_subscription_states_transient.https.html

* LayoutTests/imported/w3c/web-platform-tests/webxr/hit-test/ar_hittest_subscription_states_regular.https-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/webxr/hit-test/ar_hittest_subscription_states_transient.https-expected.txt:
* Source/WebCore/Modules/webxr/WebXRSession.cpp:
(WebCore::WebXRSession::requestHitTestSource):
(WebCore::WebXRSession::requestHitTestSourceForTransientInput):

Canonical link: https://commits.webkit.org/302971@main